Spacing cleanup. Punctuation fix.

--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -86,12 +86,11 @@
     ::About
 *------------------------------------*/
 .about-blurb{
-    padding: $pad*3;
     overflow: hidden;
+    padding: $pad*2 $pad*3;
 }
 .about-blurb__content{
     width: 100%;
-    padding: {bottom:$pad;}
     text-align: center;
     letter-spacing: 1px;
     strong{
